--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        version: ['3.9', '3.10']
         
     steps:
       - name : code Checkout
@@ -17,7 +18,7 @@ jobs:
       - name: setup python 
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'
+          python-version: ${{ matrix.version }}
           
       - name : install flake8
         run : |
@@ -28,5 +29,4 @@ jobs:
       - name : run flake8
         run : |
           flake8 app.py
-
 
